--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js"
+  },
+  "engines": {
+    "node": "11.3.0"
   },
   "repository": {
     "type": "git",
@@ -15,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/sternmd/book-reviews/issues"
   },
-  "homepage": "https://github.com/sternmd/book-reviews#readme"
+  "homepage": "https://github.com/sternmd/book-reviews#readme",
+  "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "express": "^4.16.2",
+    "jsonwebtoken": "^8.0.1",
+    "moment-js": "^1.1.15",
+    "mongoose": "^4.10.8"
+  }
 }
