--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/sternmd/book-reviews#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.0.1",
