--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client \""
   },
+  "proxy": {
+    "/api/": {
+      "target": "http://localhost:3001"
+    }
+  },
   "engines": {
     "node": "11.3.0"
   },
