--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "client": "npm run start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client \""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "proxy": {
     "/api/": {
@@ -29,7 +29,9 @@
   },
   "homepage": "https://github.com/sternmd/book-reviews#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
+    "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.0.1",
